examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__print_statements@print 0 or 1 1 or 0.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            PrintStatement(
                PrintStatement {
                    argument: [
                        BooleanOperator(
                            BooleanOperator {
                                right: PrimaryExpression(
                                    Integer(
                                        Integer {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                operator: Token_Or(
                                    Token_Or {
                                        [RANGE]
                                    },
                                ),
                                left: PrimaryExpression(
                                    Integer(
                                        Integer {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                        BooleanOperator(
                            BooleanOperator {
                                right: PrimaryExpression(
                                    Integer(
                                        Integer {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                operator: Token_Or(
                                    Token_Or {
                                        [RANGE]
                                    },
                                ),
                                left: PrimaryExpression(
                                    Integer(
                                        Integer {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    children: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
