examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__print_statements@print b c.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            PrintStatement(
                PrintStatement {
                    argument: [
                        PrimaryExpression(
                            Identifier(
                                Identifier {
                                    [RANGE]
                                },
                            ),
                        ),
                        PrimaryExpression(
                            Identifier(
                                Identifier {
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    children: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
