examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__print_statements@print not True.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            PrintStatement(
                PrintStatement {
                    argument: [
                        NotOperator(
                            NotOperator {
                                argument: PrimaryExpression(
                                    True(
                                        True {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    children: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
