examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__print_statements@print_0_or_1.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            PrintStatement(
                PrintStatement {
                    argument: [
                        BooleanOperator(
                            BooleanOperator {
                                right: PrimaryExpression(
                                    Integer(
                                        Integer {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                operator: Token_Or(
                                    Token_Or {
                                        [RANGE]
                                    },
                                ),
                                left: PrimaryExpression(
                                    Integer(
                                        Integer {
                                            [RANGE]
                                        },
                                    ),
                                ),
                                [RANGE]
                            },
                        ),
                    ],
                    children: None,
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
